--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,23 +1,23 @@
-<html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <title>Form</title>
-    <link th:href="@{/form-stylesheet.css}" rel="stylesheet">
-  </head>    
-  <body>
-    <div class="topnav">
-      <a th:href="@{/}">Form</a>
-      <a th:href="@{/grades}">Grades</a>
-    </div>   
-    <div class="container">
-      <h2> Grade Portal </h2>
-      <form method="post" th:object="${grade}" th:action="@{/handleSubmit}"> 
-        <input type="text" placeholder="Name" th:field="*{name}">
-        <input type="text" placeholder="Score" th:field="*{score}">  
-        <input type="text" placeholder="Subject" th:field="*{subject}">
-        <input type="hidden" th:field="*{id}">
-        <br><br>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
+  <title>Form</title>
+  <link th:href="@{form-stylesheet.css}" rel="stylesheet">
+</head>
+<body>
+<div class="topnav">
+  <a>Form</a>
+  <a>Grades</a>
+</div>
+<div class="container">
+  <h2> Grade Portal </h2>
+  <form method="post">
+    <input type="text" placeholder="Name">
+    <input type="text" placeholder="Score">
+    <input type="text" placeholder="Subject">
+    <br><br>
+    <input type="submit" value="Submit">
+  </form>
+</div>
 </body>
 </html>
